updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am pivoting from architecture and design into software development.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Shanghai to Phoenix to NYC</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I like to climb, cook, and explore the city by cycling.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>One where I don't have to work more than 50 hours a week!</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Ridgewood, Queens, NY</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I think there is a huge demand for it and I don't want to miss the opportunity to improve my skill set in this arena.</p>
     </section>
 
     <footer id="footer">
